--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,3 +6,5 @@ Description: What the package does (one paragraph).
 Depends: R (>= 3.2.2)
 License: What license is it under?
 LazyData: true
+URL: https://github.com/samhinshaw/guelph
+BugReports: https://github.com/samhinshaw/guelph/issues
