--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,20 @@
 Package: guelph
-Title: What the Package Does (one line, title case)
+Title: This package guelphs things you need guelphed
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-Depends: R (>= 3.2.2)
-License: What license is it under?
+Authors@R: person("Sam", "Hinshaw", email = "sam@hancocklab.com", role = c("aut", "cre"))
+Description: This is a paragraph
+    about what my package does.
+    This is not a poem
+    Though it may seem like a bad one.
+Depends: 
+    R (>= 3.2.2)
+License: CC0
 LazyData: true
 URL: https://github.com/samhinshaw/guelph
 BugReports: https://github.com/samhinshaw/guelph/issues
+RoxygenNote: 5.0.1
+Suggests: testthat,
+    knitr,
+    rmarkdown
+Imports: dplyr
+VignetteBuilder: knitr
