copying .travis.yml contents from Jenny Bryan's googlesheets package.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: R
-r_packages: dplyr
-repos:
-    CRAN: http://cran.stat.sfu.ca/
+sudo: false
+env:
+  global:
+  - NOT_CRAN: true
+cache: packages
